[package]
name = "cairus"
description = "A reimplementation of the Cairo vector graphics library in Rust"
version = "0.1.0"
authors = [
            "Kyle Kneitinger <kyle@kneit.in>",
            "Courtney Anderson-Clark",
            "Bobby Eshleman",
            "Sara Ferdousi",
            "Philip Troy Routley",
            "DJ Sabo",
            "Evan Smelser",
          ]
readme = "README.md"
repository = "https://github.com/CairusOrg/cairus"
keywords = ["graphics",]
license = "LGPL-2.1/MPL-2.0"

[dependencies]
image = '0.12.2'

[features]
debug-tesselator = []
